experiments: add joblib

--- a/experiments/requirements.txt
+++ b/experiments/requirements.txt
@@ -5,6 +5,7 @@ scipy
 scikit-learn
 hdbscan
 networkx
+joblib
 threadpoolctl
 sfr-pyrca @ git+https://github.com/salesforce/PyRCA@d85512b
 metricsifter @ git+https://github.com/ai4sre/metricsifter@main
