build: extend Python version support to 3.10-3.14
- Core package now supports Python 3.10, 3.11, 3.12, 3.13, 3.14
- Development/testing environment requires Python 3.10-3.11 due to sfr-pyrca constraints
- Update pyproject.toml to reflect Python version support
- Add Python version compatibility notes to README.md and CLAUDE.md
- Update black target versions to include py312 and py313
- Constrain scikit-learn to <1.2 for experiments due to sfr-pyrca dependency

Tested on:
- Python 3.10: All tests passing
- Python 3.11: All tests passing
- Python 3.12: Core package installation successful
- Python 3.13: Core package installation successful

--- a/pyproject.toml
+++ b/pyproject.toml
@@ -9,10 +9,13 @@ description = "Feature Reduction for Multivariate Time Series Data"
 readme = "README.md"
 authors = [{name = "yuuki"}]
 license = {text = "MIT"}
-requires-python = ">=3.10,<3.12"
+requires-python = ">=3.10"
 classifiers = [
     "Programming Language :: Python :: 3.10",
     "Programming Language :: Python :: 3.11",
+    "Programming Language :: Python :: 3.12",
+    "Programming Language :: Python :: 3.13",
+    "Programming Language :: Python :: 3.14",
     "Operating System :: OS Independent",
 ]
 dependencies = [
@@ -40,7 +43,7 @@ dev = [
 ]
 experiments = [
     "pandas-stubs",
-    "scikit-learn",
+    "scikit-learn>=0.24,<1.2",
     "hdbscan",
     "threadpoolctl",
     "sfr-pyrca @ git+https://github.com/salesforce/PyRCA@d85512b",
@@ -51,7 +54,7 @@ include = ["metricsifter*"]
 
 [tool.black]
 line-length = 120
-target-version = ["py310", "py311"]
+target-version = ["py310", "py311", "py312", "py313"]
 
 [tool.ruff]
 line-length = 120
