--- a/pyproject.toml
+++ b/pyproject.toml
@@ -8,7 +8,7 @@ version = "0.0.1"
 description = "Feature Reduction for Multivariate Time Series Data"
 readme = "README.md"
 authors = [{name = "yuuki"}]
-license = {text = "MIT"}
+license = "BSD-3-Clause"
 requires-python = ">=3.10"
 classifiers = [
     "Programming Language :: Python :: 3.10",
