--- a/.github/workflows/publish.yaml
+++ b/.github/workflows/publish.yaml
@@ -36,7 +36,7 @@ jobs:
       - build
     runs-on: ubuntu-latest
     environment:
-      name: pypi
+      name: metricsifter_pypi
       url: https://pypi.org/p/metricsifter
     permissions:
       id-token: write
