--- a/.github/workflows/ci.yaml
+++ b/.github/workflows/ci.yaml
@@ -33,6 +33,10 @@ jobs:
         if: matrix.python-version == '3.10' || matrix.python-version == '3.11'
         run: uv sync --all-extras --python ${{ matrix.python-version }}
 
+      - name: Install sfr-pyrca for tests (Python 3.10-3.11)
+        if: matrix.python-version == '3.10' || matrix.python-version == '3.11'
+        run: uv pip install git+https://github.com/salesforce/PyRCA@d85512b
+
       - name: Install core package only (Python 3.12+)
         if: matrix.python-version != '3.10' && matrix.python-version != '3.11'
         run: uv sync --python ${{ matrix.python-version }}
